--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,8 @@
 
 body {
   margin: 0;
-  font-family: "Fira Sans", sans-serif;
+}
+
+.ant-layout-footer .ant-list-tem {
+  padding: 0 !important;
 }
