--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
   color: #02ADFD;
   border-radius: 12px;
   border: 1px solid var(--artyclick-sky-blue, #02ADFD);
-  background: var(--background, #FFF);
+  background: var(--background, #F7F8F9);
 }
 
 .ant-modal-content {
