Tuan - jobdetail - update UI jobdetails
Cập nhật một số UI nhỏ

--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,13 @@ body {
 :where(.css-dev-only-do-not-override-1651f0q).ant-card .ant-card-body{
   padding: 0px !important;
 }
+
+
+
+
+/* Responsive */
+/* Screen 1600px */
+/* Screen 1200px */
+/* Screen 992px */
+/* Screen 768px */
+/* Screen 576px */
