--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,29 @@ body {
   padding: 0px !important;
 }
 
+/* Scroll */
+
+.skillSlider {
+  width: auto !important;
+}
+
+::-webkit-scrollbar {
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
 /* job management */
 
 .trackingJobs .ant-card-head{
@@ -211,4 +234,34 @@ body {
   gap: 10px;
   border-radius: 25px;
   background: var(--Alice-Blue, #EDF6FF);
+}
+
+
+
+/* responsive */
+
+
+@media (max-width: 1200px) {
+  .containerBody {
+      max-width: none !important;
+      margin-left: 30px !important;
+      margin-right: 30px !important;
+  }
+}
+
+/* Đối với màn hình có độ rộng < 768px */
+@media (max-width: 767.98px) {
+  .containerBody {
+    margin-left: 10px !important;
+    margin-right: 10px !important;
+  }
+}
+
+
+/* Đối với màn hình có độ rộng < 576px */
+@media (max-width: 575.98px) {
+  .containerBody {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
 }
