--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,21 @@ body {
   padding: 0 !important;
 }
 
+.ant-select-selection-item {
+  background-color: var(--Alice-Blue, #EDF6FF);
+  color: var(--Blue-Whale, #013042);
+}
+
+.ant-select-multiple .ant-select-selection-item {
+  background-color: var(--Alice-Blue, #EDF6FF);
+  color: var(--Blue-Whale, #013042);
+}
+
+.ant-select-multiple.ant-select-lg .ant-select-selection-item {
+  background-color: var(--Alice-Blue, #EDF6FF);
+  color: var(--Blue-Whale, #013042);
+}
+
 .swiper-button-next button, .swiper-button-prev button{
   border: none;
   box-shadow:  3px 3px 3px rgba(0, 0, 0, 0.25);
