--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ body {
   content: none !important;
 }
 
-:where(.css-dev-only-do-not-override-1651f0q).ant-card .ant-card-body{
+.ant-card .ant-card-body{
   padding: 0px !important;
 }
 
